; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_printf.c_fmtint32.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_printf.c_fmtint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fmtbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fmtbuf*, i32, i32, i32, i32, i32)* @fmtint32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmtint32(%struct.fmtbuf* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.fmtbuf*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.fmtbuf* %0, %struct.fmtbuf** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %6
  store i32 45, i32* %9, align 4
  %17 = load i32, i32* %8, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %13, align 4
  br label %27

19:                                               ; preds = %6
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %19
  store i32 43, i32* %9, align 4
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %13, align 4
  br label %26

24:                                               ; preds = %19
  store i32 0, i32* %9, align 4
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %13, align 4
  br label %26

26:                                               ; preds = %24, %22
  br label %27

27:                                               ; preds = %26, %16
  %28 = load %struct.fmtbuf*, %struct.fmtbuf** %7, align 8
  %29 = load i32, i32* %13, align 4
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @fmtuint32(%struct.fmtbuf* %28, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33)
  ret void
}

declare dso_local i32 @fmtuint32(%struct.fmtbuf*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
